force-app/main/default/objects/NI_Impacted_Customer_Persona__c/NI_Impacted_Customer_Persona__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008718</description>
    <label>Impacted Customer Persona</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Customer Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>