force-app/main/default/objects/NI_Impacted_Customer_Persona__c/fields/Impacted_Customer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Customer_Persona__c</fullName>
    <label>Impacted Customer Persona</label>
    <referenceTo>NI_Customer_Persona__c</referenceTo>
    <relationshipLabel>Prioritized Market Problems</relationshipLabel>
    <relationshipName>Prioritized_Market_Problems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>