force-app/main/default/objects/NI_Impacted_Customer_Persona__c/fields/Persona_Priority_Stack_Rank__c.field-meta.xml
<CustomField>
    <fullName>Persona_Priority_Stack_Rank__c</fullName>
    <description>The relative ranking of the associated Market Problem from the perspective of the associated Customer Persona.</description>
    <inlineHelpText>The relative ranking of the associated Market Problem from the perspective of the associated Customer Persona.</inlineHelpText>
    <label>Persona Priority Stack Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>