force-app/main/default/objects/NI_Impacted_Customer_Persona__c/fields/Persona_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Persona_Value_Proposition__c</fullName>
    <description>Salesforce.com Change Request: NICC-009202

The “Impacted Customer Persona” object holds the relationship between a Market Problem and a Customer Persona. This relationship object also contains a field called Persona Priority Stack Rank. We have a need to add another rich text field called “Persona Value Proposition” that can hold the specific value that would be provided to the customer persona if we delivered on the market problem. In summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The specific value that would be provided to the customer persona if we delivered on the market problem</inlineHelpText>
    <label>Persona Value Proposition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>